css/home.scss
/* ... */
@media only screen and (max-width: 360px) {
  img.logo {
    width: 100%;
  }
}
.green-t {
  color: #7ecd94;
  border-bottom: 1px solid #7ecd94;
}

::-webkit-input-placeholder {
  color: #666;
}

:-moz-placeholder {
  /* Firefox 18- */
  color: #aaa;
}

::-moz-placeholder {
  /* Firefox 19+ */
  color: #aaa;
}

:-ms-input-placeholder {
  color: #aaa;
}

.su {
  overflow: auto;
  box-sizing: border-box !important;
  padding: 50px;
  width: 100%;
}
.su h1 {
  font-family: 'freight-text-pro';
  text-align: center;
  margin-top: -20px;
  margin-bottom: 20px;
}

#fancybox-content {
  box-sizing: border-box;
  border-width: 0 !important;
}

#fancybox-content + div {
  box-sizing: border-box;
  width: 480px;
}

#fancybox-outer {
  width: 480px !important;
}

html.beta {
  margin: 0;
}

html.beta, body.beta {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
}

body.beta {
  margin: 0;
  font-family: "freight-sans-pro", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 120%;
  line-height: 1.67;
  text-rendering: optimizeLegibility;
  background: #f7f7f7;
  background-size: cover;
  color: #415252;
}
body.beta a {
  text-decoration: none;
  color: #36adea;
}
body.beta .big.fat {
  font-size: 80%;
  display: inline-block;
  text-transform: uppercase;
  font-family: "calluna-sans", sans-serif;
  color: #f7f7f7;
  background: #73c98b;
  max-width: 80%;
  box-sizing: border-box;
  margin-bottom: 4%;
  padding: 15px 30px;
  border-radius: 6px;
}
body.beta .button {
  border-radius: 3px;
  transition: 0.25s ease;
  position: relative;
  z-index: 0;
  color: white;
}
body.beta .button:active {
  top: 1px;
}
body.beta .button:focus {
  top: 1px;
  outline: none;
}
body.beta .green {
  background: #7ecd94;
}
body.beta .green.button {
  box-shadow: inset 0px -2px #59bf76;
  text-shadow: 0px 1px 0px #40a55c;
  font-size: 80%;
}
body.beta .green.button:hover {
  background: #73c98b;
}
body.beta .green.button:active {
  background: #6cc685;
  box-shadow: inset 0px -1px #59bf76;
  top: 1px;
}
body.beta .green.button:focus {
  background: #5dc079;
  box-shadow: inset 0px -1px #59bf76;
  top: 1px;
  outline: none;
}
body.beta .blue {
  background: #36adea;
}
body.beta .blue.button {
  box-shadow: inset 0px -2px #1695d7;
  text-shadow: 0px 1px 0px #1275a8;
  font-size: 80%;
}
body.beta .blue.button:hover {
  background: #28a7e9;
}
body.beta .blue.button:active {
  background: #1fa4e8;
  box-shadow: inset 0px -1px #1695d7;
  top: 1px;
}
body.beta .blue.button:focus {
  background: #1799db;
  box-shadow: inset 0px -1px #1695d7;
  top: 1px;
  outline: none;
}
body.beta .dark-gray {
  background: #415252;
}
body.beta .dark-gray.button {
  box-shadow: inset 0px -2px #2a3636;
  text-shadow: 0px 1px 0px #141919;
  font-size: 80%;
}
body.beta .dark-gray.button:hover {
  background: #3a4949;
}
body.beta .dark-gray.button:active {
  background: #364444;
  box-shadow: inset 0px -1px #2a3636;
  top: 1px;
}
body.beta .dark-gray.button:focus {
  background: #2d3838;
  box-shadow: inset 0px -1px #2a3636;
  top: 1px;
  outline: none;
}
body.beta .red {
  background: #ea3636;
}
body.beta .red.button {
  box-shadow: inset 0px -2px #d71616;
  text-shadow: 0px 1px 0px #a81212;
  font-size: 80%;
}
body.beta .red.button:hover {
  background: #e92828;
}
body.beta .red.button:active {
  background: #e81f1f;
  box-shadow: inset 0px -1px #d71616;
  top: 1px;
}
body.beta .red.button:focus {
  background: #db1717;
  box-shadow: inset 0px -1px #d71616;
  top: 1px;
  outline: none;
}
body.beta .hglt {
  /*background: white;*/
  padding: 10px 20px;
  margin-left: -10px;
}
body.beta .iu {
  margin-bottom: 50px;
  margin-top: 55px;
}
body.beta .iu .img {
  height: 100% !important;
  background-repeat: no-repeat;
  background-position: center;
}
.full-width-form ::-webkit-input-placeholder {
  color: #e3e3e3;
}
.full-width-form .welcome {
  font-size: 95%;
}
.full-width-form .welcome p {
  margin: 0;
}
.full-width-form .card {
  background: white;
  box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.08);
  width: 480px;
  box-sizing: border-box;
  padding: 50px 50px 15px 50px;
  display: inline-block;
  vertical-align: middle;
  border-radius: 2px;
  text-align: left;
  margin: 0 auto;
}
.full-width-form .block {
  height: 100%;
  text-align: center;
}
.full-width-form .block:before {
  content: '';
  display: inline-block;
  height: 100%;
  vertical-align: middle;
  box-sizing: border-box;
}
.full-width-form img.logo {
  width: 40%;
  margin: 0 0 10px 0;
}
.full-width-form div.logo {
  text-align: center;
}
.full-width-form p {
  padding-bottom: 20px;
  font-family: 'freight-text-pro';
  font-size: 100%;
  color: #6b6b6b;
}
.full-width-form .field {
  -webkit-appearance: none;
  outline: none;
  -webkit-user-select: none;
  border: none;
  border-top: thin solid #dedede;
  width: calc(100% + 100px);
  margin-left: -50px;
  box-sizing: border-box;
  padding-left: 50px;
  font-family: "freight-sans-pro", sans-serif;
  font-size: 100%;
  padding: 12px 50px 12px 50px;
  margin-bottom: -2px;
  z-index: 0;
  position: relative !important;
}
.full-width-form .field:focus {
  box-shadow: 0px 2px 0px #7ecd94, 0px -2px 0px #7ecd94;
  z-index: 1;
  border-top: thin solid transparent;
}
.full-width-form .fld {
  position: relative;
}
.full-width-form .fld i {
  position: absolute;
  z-index: 999;
  height: 52px;
  top: 2px;
  left: -50px;
  width: 50px;
  line-height: 52px;
  text-align: center;
  color: #5e5e5e;
}
.full-width-form .treatment {
  border-bottom: thin solid #dedede !important;
}
.full-width-form .treatment:focus {
  border-bottom: thin solid transparent;
}
.full-width-form .submit {
  -webkit-display: none;
  background: #7ecd94;
  border: none;
  font-family: "freight-sans-pro", sans-serif;
  font-size: 100%;
  margin-top: 30px;
  color: white;
  width: 100% !important;
  max-width: 100% !important;
  padding: 12px 0 !important;
  border-radius: 4px !important;
  margin-bottom: -30px;
  text-align: center;
}
/* ... */

